Commit for website to work

--- a/Assets/css/style_3.css
+++ b/Assets/css/style_3.css
@@ -2,4 +2,6 @@
 
 Format form contents to fit their containing columns (not too difficult);
 
+Form doesn't really need to change as much as the other content on the other pages
+
 */
